[project]
name = "mit-6-s184"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "celluloid>=0.2.0",
    "matplotlib>=3.9.4",
    "nbconvert>=7.16.6",
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
